--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <!-- Navigation -->
             <nav id="nav">
-                <a href="home.html">Travel</a>
+                <a href="index.html">Travel</a>
                 <a href="shop.html">Shop</a>
                 <a href="blog.html">Blogs</a>
                 <a href="contact.html">Contact Us</a>
